VSDebugPro_4-2-1-0
    [*] Fix vsix dll includes
	
VSDebugPro_4-2-0-0
    [+] Added repeat last action command
    [+] Added a command to export the commands history buffer as yaml
    [+] Updated icons, toolbar

VSDebugPro_4-1-1-0
    [+] VS2019 compatibility

VSDebugPro_4-1-0-0
    [+] Added Arm64 install target
    [+] Dumping, writing memory of C# / .NET in preview
    [+] New settings backend. All user settings are now stored in AppData
    [+] MOTD messages via DNS
    [+] Added handling of https:// in console
    [+] New Logo
    [*] Updated settings ui
    [*] Fixed the look of console window bottom bar
    [*] Fixed saving of settings, aliases, command history
    [*] Code cleanup, refactoring

VSDebugPro_4-0-1-0
    [*] Code cleanup, refactoring, small fixes

VSDebugPro_4-0-0-0
    [+] Added support for VS2022
    [+] Moved to NET 4.8
    [-] Dropped support for older vs versions
    [*] Cleaned up assembly references
    [*] Converted assembly references to package references


VSDebugPro_3-4-0-1_2022-05-07
    [+] Always use debugger api
    [+] Memory operations for remote debugging
    [*] Memory ops buffer increased to 64k
    [*] Cleanup
    [*] Updated copyright

VSDebugPro_3-3-0-1_2019-08-06
    
    [+] The extension is now using Visual Studio debugger api
    [+] Remote debugging 
    [+] Improved arguments parsing for commands
    [*] Updated copyright

VSDebugPro_3-3-0-1_2019-08-06

    [*] Installer bugfix
    [*] Updated copyright years

VSDebugPro_3-3-0-0_2019-08-03

    [+] Enabled install for newever versions of VS2019
    [*] Code refactoring and fixes

VSDebugPro_3-2-0-1_2019-03-23

    [+] Enabled install for VS2019
    [*] Updated AddEntry method for the commands history buffer
    [*] Updated copyright

VSDebugPro_3-2-0-0_2018-08-22

    [+] Added DkmProcess internal apis
    [+] Added minidump status message for commands
    [+] Added minidump support for dumpmem command

VSDebugPro_3-1-0-3_2018-08-12
