@@ -1,3 +1,6 @@
+VSDebugPro_4-2-2-0
+    [+] Added yaml file for scripting
+
 VSDebugPro_4-2-1-0
     [*] Fix vsix dll includes
 	
